# threat-intel-aggregator

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AUDIT_REPORT.md  CHANGELOG.md  CLAUDE.md  Dockerfile  PATCHES.md  README.md  STATUS.md  docker-compose.yml  docker-entrypoint.sh  main.py  pyproject.toml
.github/workflows/: ci.yml
deploy/systemd/: README.md  threat-intel-api.service  threat-intel@.service  threat-intel@.timer
scripts/: auto_block.sh  cleanup_output.sh  dns_block.sh  extract_iocs.py  install_cron.sh  nftables_block.sh  uninstall_cron.sh  verify_blocks.sh
src/: __init__.py  logging_config.py
src/agents/: __init__.py  _enrichment_base.py  attack_mapper.py  correlation_agent.py  cve_scraper.py  epss_enrichment.py  feed_aggregator.py  github_advisory.py  ioc_extractor.py  reflection.py  report_coordinator.py  shodan_enrichment.py  supervisor.py  virustotal_enrichment.py
src/api/: app.py
src/graph/: __init__.py  swarm.py
src/integrations/: es_indexer.py  prometheus_exporter.py  wazuh_client.py
src/models/: __init__.py  threat.py
src/pipeline/: __init__.py  normalizer.py
src/tools/: __init__.py  attack_client.py  base_client.py  epss_client.py  feed_clients.py  github_advisory_client.py  ioc_clients.py  nvd_client.py  shodan_client.py  virustotal_client.py
tests/integration/: test_swarm_pipeline.py
tests/unit/: test_agents.py  test_api_auth.py  test_base_client_reliability.py  test_correlation_sampling.py  test_correlation_sampling_perf.py  test_dns_block_idempotency.py  test_ecs_schema.py  test_enrichment_idempotency.py  test_es_indexer.py  test_ioc_severity_mapping.py  test_models_and_pipeline.py  test_prometheus_exporter.py  test_reflection_agent.py  test_supervisor_agent.py  test_tool_clients.py  test_url_validators.py  test_wazuh_client.py
